# mmrun

./: Makefile.am
resource/: Makefile.am
src/: Makefile.am  ci_string.h  gtkcompletionline.cc  main.cc
